src/component/header.scss
.header {
  position: fixed;
  z-index: 1001;
  top: 0;
  left: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 3rem;
  width: 100%;
  padding: 0.5rem;
  box-sizing: border-box;
  background-color: #eeeeee;

  > div:nth-of-type(2) {
    display: flex;
    gap: 8px;
    align-items: center;
    height: 100%;
  }

  > div:nth-of-type(3) {
    display: flex;
    justify-content: flex-end;
    gap: 4px;

    .icon-btn {
      width: 32px;
      height: 32px;
      padding: 4px;

      svg {
        height: 20px;
        width: 20px;
      }
    }
  }
}

